--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -5,6 +5,8 @@
     <title>Title</title>
 </head>
 <body>
-	<h2 th:text="${title}"></h2>
 </body>
+<div  
+	th:text="${entry.getTitle()}"
+	th:each="entry : ${posts}"></div>
 </html>
